fix weird spacing on blog (#35)
* fix weird spacing on blog

* it was the pre code block messing up the spacing

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -27,8 +27,7 @@
     grid-template-columns: 1fr;
   }
 
-  .prose > * {
-    grid-column: 1 / span 1;
+  .prose > *:not(pre) {
     inline-size: 100%;
   }
 }
